--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,12 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".UpdateProfile"
+            android:exported="false" />
+        <activity
+            android:name=".ProfileActivity"
+            android:exported="false" />
+        <activity
             android:name=".UpdateAdress"
             android:exported="false" />
         <activity
@@ -61,7 +67,7 @@
             android:name=".MainActivity"
             android:exported="true" />
         <activity
-            android:name=".SobreActivity"
+            android:name=".Contacts"
             android:exported="false" />
         <activity
             android:name=".RecuperacaoPasswordActivity"
