--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,6 +72,9 @@
         <activity
             android:name=".RecoveryPasswordActivity"
             android:exported="false" />
+        <activity
+            android:name=".SpotValuationActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
